--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.11"
 lakeapi = "^0.14.0"
 numpy = "1.26.4"
 matplotlib = "^3.9.0"
+plotly = "^5.22.0"
+cufflinks = "^0.17.3"
+nbformat = "^5.10.4"
 
 
 [tool.poetry.group.dev.dependencies]
