--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ matplotlib = "^3.9.0"
 plotly = "^5.22.0"
 cufflinks = "^0.17.3"
 nbformat = "^5.10.4"
+sortedcontainers = "^2.4.0"
+
 
 
 [tool.poetry.group.dev.dependencies]
