--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Heratostene <25960839+CossonArthur@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.11.5"
 lakeapi = "^0.14.0"
 numpy = "1.26.4"
 matplotlib = "^3.9.0"
@@ -16,11 +16,19 @@ nbformat = "^5.10.4"
 sortedcontainers = "^2.4.0"
 scipy = "^1.13.1"
 statsmodels = "^0.14.2"
+torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
+torchvision = {version = "^0.18.1+cpu", source = "pytorch_cpu"}
 
 
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
+
+
+[[tool.poetry.source]]
+name = "pytorch_cpu"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
