--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "data"
 version = "0.1.0"
 description = ""
-authors = ["Heratostene <25960839+CossonArthur@users.noreply.github.com>"]
+authors = ["CossonArthur <25960839+CossonArthur@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -18,6 +18,7 @@ scipy = "^1.13.1"
 statsmodels = "^0.14.2"
 torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
 torchvision = {version = "^0.18.1+cpu", source = "pytorch_cpu"}
+seaborn = "^0.13.2"
 
 
 
